<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">310967959070516</string>
    <string name="app_name">War of Kingdoms</string>
    <string name="app_shot_name">W of K</string>
    <string name="title_activity_game">War of Kingdoms</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="play_label">Play</string>
    <string name="profile_label">Profile</string>
    <string name="about_label">About</string>
    <string name="conflicts_label">Conflicts</string>
    <string name="next_conflict_label">Next</string>
    <string name="tap_to_throw_dice">Tap to Throw</string>
    <string name="developers_label">Developers</string>
    <string name="support_feedback_label">Support and Feedback</string>
    <string name="victory_track_label">Victory Track</string>
    <string name="last_ten_games_label">Last 10 matches</string>
    <string name="player_label">Players</string>
    <string name="sorry_label">We\'re very sorry!</string>
    <string name="no_internet_msg">You need internet  =\\</string>
    <string name="server_down_msg">Our system is down =\\</string>
    <string name="internet_missbehaving_msg">Our system is missbehaving =\\</string>
    <string name="conflict_lost_label">Conflict Lost</string>
    <string name="conflict_won_label">Conflict Won</string>
    <string name="conflict_tie_label">Conflict Drew</string>
    <string name="game_over_label">The Game is Over</string>
    <string name="ok_label">OK</string>
    <string name="action_label">Action</string>
    <string name="remove_action_label">Remove Action</string>
    <string name="attack_action_label">Attack</string>
    <string name="defense_action_label">Defense</string>
    <string name="cancel_action_label">Remove</string>
    <string name="objective_label">Objective</string>
    <string name="what_objective_label">You must conquer at least 3 territories in each region</string>
    <string name="north_objective">North</string>
    <string name="center_objective">Center</string>
    <string name="south_objective">South</string>
    <string name="homebase_objective">Keeping your homebase</string>
    <string name="andre_label">André</string>
    <string name="arnett_label">Arnett</string>
    <string name="luan_label">Luan</string>
    <string name="rafael_label">Rafael</string>
    <string name="game_email_label">wofkapp@gmail.com</string>

    <!-- info messages -->
    <string name="territory_already_owned_by_you_info">Territory already owned by you</string>
    <string name="attack_a_neighbour_territory_info">Attack a neighbour territory</string>
    <string name="you_already_attacked_this_territory_info">You already attacked this territory</string>
    <string name="territory_already_used_during_this_turn_info">Territory already used</string>
    <string name="choose_a_territory_owned_by_you_info">Choose a territory owned by you</string>

    <!-- Tutorial -->
    <string name="tutorial_txt1">Press play</string>
    <string name="tutorial_txt2">Wait for other players to join</string>
    <string name="tutorial_txt3">Planning Phase!\nTouch on your territories</string>
    <string name="tutorial_txt4">Choose an action\nAttack another territory, or\nDefend yours</string>
    <string name="tutorial_txt5">Choose a neighbour to attack</string>
    <string name="tutorial_txt6">All moves placed!?\nLet\'s go to the next phase :)</string>
    <string name="tutorial_txt6a">Wait for other players to finish their moves</string>
    <string name="tutorial_txt6b">Everyone has the same time to finish its moves</string>
    <string name="tutorial_txt7">Conflict!\nAnother player wants this territory</string>
    <string name="tutorial_txt8">See your objective status at anytime</string>
    <string name="tutorial_txt8a">See the list of players at anytime</string>
    <string name="tutorial_txt9">Your goal:\nConquer 3 territories in each region</string>
    <string name="tutorial_txt9a">Ready to see if you\'re fit to rule? :)</string>

    <!-- Wait messages -->
    <string name="waiting_players_join">Waiting for other players to join&#8230;</string>
    <string name="waiting_players_moves">Waiting other players moves&#8230;</string>

    <!-- Other -->
    <string name="logout">logout</string>
    <string name="anonymous_player">Anonymous</string>
    <string name="you_label">You</string>
    <string name="won_label">Won!</string>
    <string name="wo_label">The opponent left!</string>
    <string name="keep_homebase_label">Keep Homebase</string>
    <string name="retrieve_homebase_label">Retrieve Homebase!</string>
    <string name="alpha_label">Alpha tests</string>
    <string name="alpha_message">Be cool with our alpha(tests) version =)</string>
    <string name="not_yet_implemented">We\'re still working on this&#8230;</string>

    <!-- Feedback -->
    <string name="feedback_label">Feedback</string>
    <string name="rate_label">Rate it</string>
    <string name="would_pay_label">Would you pay for this app?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="general_comments_label">General Comments =)</string>
    <string name="send_label">Send</string>
    <string name="later_label">Later</string>
    <string name="feedback_sent">Thank you for helping us! =)</string>

</resources>