<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/playButton"
        android:layout_marginBottom="19dp"
        android:layout_toRightOf="@+id/playButton"
        android:text="@string/play_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/profileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playButton"
        android:layout_below="@+id/playButton"
        android:layout_marginTop="19dp"
        android:background="@color/mainBackgroundColor"
        android:src="@drawable/smaller_profile_button" />

    <ImageView
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="21dp"
        android:layout_marginTop="80dp"
        android:layout_toLeftOf="@+id/imageView1"
        android:background="@color/mainBackgroundColor"
        android:src="@drawable/smaller_play_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/smaller_game_icon" />

    <ImageView
        android:id="@+id/aboutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profileBtn"
        android:layout_below="@+id/profileBtn"
        android:layout_marginTop="17dp"
        android:background="@color/mainBackgroundColor"
        android:src="@drawable/smaller_about_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profileBtn"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@+id/playButton"
        android:text="@string/profile_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/aboutBtn"
        android:layout_marginBottom="18dp"
        android:layout_toRightOf="@+id/playButton"
        android:text="@string/about_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />
    
</RelativeLayout>