<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dialogtests.MainActivity$PlaceholderFragment" 
    android:id="@+id/conflict_mainLayout">

    <TextView
        android:id="@+id/territory_in_conflict_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="28dp"
        android:textSize="25sp"
        android:text="Territory X"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/conflicts_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/nextConflictBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="0dip"
        android:layout_marginBottom="24dp"
        android:background="@color/dark_gray"
        android:visibility="invisible"
        android:text="@string/next_conflict_label" />

    <ImageView
        android:id="@+id/unknownDiceImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/territory_in_conflict_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:clickable="true"
        android:src="@drawable/unknown_dice" />

    <TextView
        android:id="@+id/tapDiceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/unknownDiceImg"
        android:layout_centerHorizontal="true"
        android:text="@string/tap_to_throw_dice"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>